--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-architect
 title: Heribertus Yulianton
-description: Halaman profil Heribertus Yulianton
